--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.vlkan.log4j2</groupId>
     <artifactId>log4j2-logstash-layout-parent</artifactId>
-    <version>0.15-31K-SNAPSHOT</version>
+    <version>0.15-31K</version>
     <packaging>pom</packaging>
 
     <modules>
